Fixed recursion in thin loops accidentally trying to close the parent loop (bug 464089, r=gal).